<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/attendanceOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/attendance"
        android:title="Attendance"
        android:visible="false"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/editOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_edit_24"
        android:title="Edit"
        android:visible="false"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/saveOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_save_24"
        android:title="Save"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/cancelOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cancel"
        android:title="Cancel"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/addOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add"
        android:title="Add"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/anouncementsOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/notifications"
        android:title="Announcements"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/deleteOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/delete"
        android:title="Delete"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/signUpOptionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="SIGN UP"
        android:visible="false"
        app:showAsAction="always" />
</menu>