<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        tools:context=".ui.event.EventEditFragment">

        <ImageView
            android:id="@+id/edit_iv_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/tv_event_add_poster"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_poster_prompt"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/bordeaux_medium"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/edit_iv_poster" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_event_main_info_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_iv_poster">

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica_bold"
                android:hint="@string/event_name"
                android:paddingHorizontal="15dp"
                android:textAllCaps="true"
                android:textColor="@color/plum_dark"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_edit_event_startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/start_date"
                android:paddingHorizontal="15dp"
                android:textColor="@color/bordeaux_medium"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_edit_event_startTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_event_name" />

            <TextView
                android:id="@+id/tv_edit_event_endDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/end_date"
                android:paddingHorizontal="15dp"
                android:textColor="@color/bordeaux_medium"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/tv_edit_event_endTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_edit_event_startDate" />

            <TextView
                android:id="@+id/tv_edit_event_startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/start_time"
                android:paddingHorizontal="15dp"
                android:textColor="@color/bordeaux_medium"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_edit_event_startDate"
                app:layout_constraintTop_toBottomOf="@+id/et_event_name" />

            <TextView
                android:id="@+id/tv_edit_event_endTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/tv_end_time"
                android:paddingHorizontal="15dp"
                android:textColor="@color/bordeaux_medium"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_edit_event_endDate"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_event_startTime" />

            <EditText
                android:id="@+id/et_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/location"
                android:inputType="textPostalAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="2dp"
                android:textColor="@color/aubergine_main"
                android:textColorHint="@color/mauve_medium_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_edit_event_endDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_set_max_attendees_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/set_max_attendees"
            android:textColor="@color/aubergine_main"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_event_main_info_constraint" />

        <CheckBox
            android:id="@+id/cb_max_attendees"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:buttonTint="@color/plum_dark"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_max_attendees_label"
            app:layout_constraintStart_toEndOf="@+id/tv_set_max_attendees_label"
            app:layout_constraintTop_toTopOf="@id/tv_set_max_attendees_label" />

        <EditText
            android:id="@+id/et_max_attendees"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_corners_r"
            android:clickable="false"
            android:enabled="false"
            android:fontFamily="@font/helvetica"
            android:hint="@string/sample_attendees"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/bordeaux_medium"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_max_attendees_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_max_attendees"
            app:layout_constraintTop_toTopOf="@id/tv_set_max_attendees_label" />

        <TextView
            android:id="@+id/tv_additional_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/event_add_info"
            android:textColor="@color/plum_dark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set_max_attendees_label" />


        <EditText
            android:id="@+id/et_additional_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corners_r"
            android:fontFamily="@font/helvetica"
            android:gravity="top"
            android:hint="@string/add_info_hint"
            android:lineSpacingExtra="8sp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textColor="@color/bordeaux_medium"
            android:textColorHint="@color/mauve_medium_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_additional_info" />

        <TextView
            android:id="@+id/edit_tv_event_detail_QR_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/qr_codes"
            android:textColor="@color/aubergine_main"
            android:textSize="22sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_additional_info"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editQRconstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corners_r"
            android:paddingVertical="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_tv_event_detail_QR_label"
            tools:visibility="visible">

            <Spinner
                android:id="@+id/reuseQrCode"
                android:layout_width="269dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
