...
            android:textColor="@color/plum_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_add_alert_title"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_r"
            android:hint="@string/alert_title"
            android:inputType="text"
...
            android:textColor="@color/plum_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_alert_title"/>

        <EditText
            android:id="@+id/et_add_alert_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_r"
            android:fontFamily="@font/helvetica"
            android:gravity="top|left"
            android:hint="@string/alert_message_hint"
...
