...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_profile"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner_profile_page"
        android:clickable="false"

...
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_phone"
        app:layout_constraintEnd_toStartOf="@id/edit_text_last_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
        app:layout_constraintVertical_chainStyle="spread" />

...
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_first_name" />

    <EditText
        android:id="@+id/edit_text_email"
...
