...
        android:id="@+id/eventBrowseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/browse_events"
        android:title="@string/browse_events" />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
    <item
...
